force-app/main/default/objects/Project__c/fields/PropertyOwnerContact__c.field-meta.xml
<CustomField>
    <fullName>PropertyOwnerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Property Owner)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>