force-app/main/default/objects/Project__c/fields/PropertyOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>PropertyOwnerEmail__c</fullName>
    <formula>PropertyOwnerContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PropertyOwnerEmail</label>
    <type>Text</type>
</CustomField>