force-app/main/default/objects/Project__c/fields/PropertyOwnerName__c.field-meta.xml
<CustomField>
    <fullName>PropertyOwnerName__c</fullName>
    <formula>&apos;FirstName~&apos;+PropertyOwnerContact__r.FirstName+&apos;;&apos;+&apos;LastName~&apos;+PropertyOwnerContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PropertyOwnerName</label>
    <type>Text</type>
</CustomField>