force-app/main/default/objects/Project__c/fields/ProposedLoad__c.field-meta.xml
<CustomField>
    <fullName>ProposedLoad__c</fullName>
    <label>Proposed Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>