force-app/main/default/objects/Project__c/fields/ProposedTargetDate__c.field-meta.xml
<CustomField>
    <fullName>ProposedTargetDate__c</fullName>
    <label>Proposed Target Date</label>
    <type>Date</type>
</CustomField>