force-app/main/default/objects/Project__c/fields/ProposedTypeOfLantern__c.field-meta.xml
<CustomField>
    <fullName>ProposedTypeOfLantern__c</fullName>
    <label>Proposed Type Of Lantern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>