force-app/main/default/objects/Project__c/fields/ReadyToSelectASP__c.field-meta.xml
<CustomField>
    <fullName>ReadyToSelectASP__c</fullName>
    <label>Ready To Select ASP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>