force-app/main/default/objects/Project__c/fields/ReasonForRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRequest__c</fullName>
    <label>Reason For Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Road works</fullName>
            </value>
            <value>
                <fullName>Building / construction works</fullName>
            </value>
            <value>
                <fullName>Underground assets</fullName>
            </value>
            <value>
                <fullName>Estate / subdivisions</fullName>
            </value>
            <value>
                <fullName>Building Works</fullName>
            </value>
            <value>
                <fullName>Transporting high load</fullName>
            </value>
            <value>
                <fullName>Excavation works</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>