force-app/main/default/objects/Project__c/fields/ReasonForSuspension__c.field-meta.xml
<CustomField>
    <fullName>ReasonForSuspension__c</fullName>
    <label>Reason for Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>