force-app/main/default/objects/Project__c/fields/RecordOwner__c.field-meta.xml
<CustomField>
    <fullName>RecordOwner__c</fullName>
    <label>Record Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>