force-app/main/default/objects/Project__c/fields/RectifierBattery__c.field-meta.xml
<CustomField>
    <fullName>RectifierBattery__c</fullName>
    <label>Rectifier Battery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>