force-app/main/default/objects/Project__c/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <description>Reference number of the application</description>
    <label>Reference Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>