force-app/main/default/objects/Project__c/fields/ReferenceNumberType__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumberType__c</fullName>
    <label>Reference Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subdivision plan number</fullName>
            </value>
            <value>
                <fullName>Spear plan number</fullName>
            </value>
            <value>
                <fullName>Planning permit number</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>