force-app/main/default/objects/Project__c/fields/RelationshipToOwner__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToOwner__c</fullName>
    <label>Relationship To Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered Electrical Contractor (REC)</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Accredited Service Provider - AusNet Services</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Family Member/Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>