force-app/main/default/objects/Project__c/fields/RelocateRemoveAsset__c.field-meta.xml
<CustomField>
    <fullName>RelocateRemoveAsset__c</fullName>
    <label>Relocate Remove Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>