force-app/main/default/objects/Project__c/fields/RelocateRemoveAssetNeeded__c.field-meta.xml
<CustomField>
    <fullName>RelocateRemoveAssetNeeded__c</fullName>
    <label>Relocate Remove Asset Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>