force-app/main/default/objects/Project__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relocate /Alter Existing AusNet Assets</fullName>
            </value>
            <value>
                <fullName>Remove Existing AusNet Assets</fullName>
            </value>
            <value>
                <fullName>Work Near AusNet Assets (No Go Zones)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>