force-app/main/default/objects/Project__c/fields/RnDPlanFaceSheetSubmitted__c.field-meta.xml
<CustomField>
    <fullName>RnDPlanFaceSheetSubmitted__c</fullName>
    <label>R&amp;D Plan Face Sheet Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>