force-app/main/default/objects/Project__c/fields/RockFoundorExpected__c.field-meta.xml
<CustomField>
    <fullName>RockFoundorExpected__c</fullName>
    <label>Rock Found or Expected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>