force-app/main/default/objects/Project__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <label>Sales Order</label>
    <length>40</length>
    <type>Text</type>
</CustomField>