force-app/main/default/objects/Project__c/fields/SAP_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Integration_Status__c</fullName>
    <label>SAP Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Create</fullName>
            </value>
            <value>
                <fullName>Ready to Update</fullName>
            </value>
            <value>
                <fullName>Ready to Get</fullName>
            </value>
            <value>
                <fullName>Pending Triage</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>