force-app/main/default/objects/Project__c/fields/SAPCMDescription__c.field-meta.xml
<CustomField>
    <fullName>SAPCMDescription__c</fullName>
    <label>SAPCMDescription</label>
    <length>40</length>
    <type>Text</type>
</CustomField>