force-app/main/default/objects/Project__c/fields/SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPStatus__c</fullName>
    <defaultValue>&quot;REGI&quot;</defaultValue>
    <description>Display of where the project is up to</description>
    <label>SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMStatus</valueSetName>
    </valueSet>
</CustomField>