force-app/main/default/objects/Project__c/fields/SAPStatusDaysSinceChange_fx__c.field-meta.xml
<CustomField>
    <fullName>SAPStatusDaysSinceChange_fx__c</fullName>
    <description>Total Number of Days Since the SAP Status was changed</description>
    <formula>( TODAY())-(SAPStatusUpdateDate__c)</formula>
    <label>SAPStatusDaysSinceChange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>