force-app/main/default/objects/Project__c/fields/SAPStatusFlag__c.field-meta.xml
<CustomField>
    <fullName>SAPStatusFlag__c</fullName>
    <label>Status Flag</label>
    <length>4</length>
    <type>Text</type>
</CustomField>