force-app/main/default/objects/Project__c/fields/SAPStatusFlagFx__c.field-meta.xml
<CustomField>
    <fullName>SAPStatusFlagFx__c</fullName>
    <description>Formula field to show the full flag description (used in the community) based on the value in SAPStatusFlag__c</description>
    <formula>IF(SAPStatusFlag__c = &quot;PPRC&quot;, &quot;Planning permit received&quot;,
 IF(SAPStatusFlag__c = &quot;PPRE&quot;, &quot;Planning permit replied&quot;,
  IF(SAPStatusFlag__c = &quot;CERC&quot;, &quot;Certification received&quot;,
   IF(SAPStatusFlag__c = &quot;CERE&quot;, &quot;Certification replied&quot;,
    IF(SAPStatusFlag__c = &quot;CORC&quot;, &quot;SOC request received&quot;,
     IF(SAPStatusFlag__c = &quot;CORE&quot;, &quot;SOC supplied&quot;,
      IF(SAPStatusFlag__c = &quot;SUBS&quot;, &quot;Subdivision suspended&quot;, null
      )
     )
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>