force-app/main/default/objects/Project__c/fields/SAPStatusUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>SAPStatusUpdateDate__c</fullName>
    <label>SAP Status Update Date</label>
    <type>Date</type>
</CustomField>