force-app/main/default/objects/Project__c/fields/ScopeOfWorkRequired__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfWorkRequired__c</fullName>
    <label>Scope Of Work Required</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>