force-app/main/default/objects/Project__c/fields/SignallingCabinetLargestSingleUnit__c.field-meta.xml
<CustomField>
    <fullName>SignallingCabinetLargestSingleUnit__c</fullName>
    <label>Signalling cabinet Largest Single Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>