force-app/main/default/objects/Project__c/fields/SignallingCabinetNode__c.field-meta.xml
<CustomField>
    <fullName>SignallingCabinetNode__c</fullName>
    <label>Signalling Cabinet Node</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>