force-app/main/default/objects/Project__c/fields/SignallingCabinetTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>SignallingCabinetTotalLoad__c</fullName>
    <label>Signalling cabinet Total  Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>