force-app/main/default/objects/Project__c/fields/SignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>SignatureStatus__c</fullName>
    <label>SignatureStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>