force-app/main/default/objects/Project__c/fields/SitecoreAcceptanceLink__c.field-meta.xml
<CustomField>
    <fullName>SitecoreAcceptanceLink__c</fullName>
    <label>Sitecore Acceptance Link</label>
    <type>Url</type>
</CustomField>