force-app/main/default/objects/Project__c/fields/SiteOwner__c.field-meta.xml
<CustomField>
    <fullName>SiteOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TV-1422</description>
    <label>Site Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Site Owner)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>