force-app/main/default/objects/Project__c/fields/SizeOfProposedDwelling__c.field-meta.xml
<CustomField>
    <fullName>SizeOfProposedDwelling__c</fullName>
    <label>Size Of Proposed Dwelling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 12 Squares (&lt;110 sqm)</fullName>
            </value>
            <value>
                <fullName>Between 12-30 Squares (110 - 280 sqm)</fullName>
            </value>
            <value>
                <fullName>Over 30 Squares (&gt;280 sqm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>