force-app/main/default/objects/Project__c/fields/SpearReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SpearReferenceNumber__c</fullName>
    <label>Spear Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>