force-app/main/default/objects/Project__c/fields/StageoftheEstate__c.field-meta.xml
<CustomField>
    <fullName>StageoftheEstate__c</fullName>
    <label>Stage of the Estate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>