force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status for the landing page of the community</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SAPStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ProjectStatus</valueSetName>
    </valueSet>
</CustomField>