force-app/main/default/objects/Project__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>IF(OR($Profile.Name  = &apos;TVE-11 Customer User&apos;, $Profile.Name  = &apos;TVE-11 Partner User&apos;), IF( ISPICKVAL(SAPStatus__c, &apos;On time&apos;) , IMAGE(&apos;/sfsites/c/resource/1574168955000/greenImage&apos;, TEXT(SAPStatus__c), 20, 20) , 
IMAGE(&apos;/sfsites/c/resource/1574166438000/errorIMG&apos;, TEXT(SAPStatus__c) , 20, 20) ), IF( ISPICKVAL(SAPStatus__c, &apos;On time&apos;) , IMAGE(&apos;/resource/1574168955000/greenImage&apos;, TEXT(SAPStatus__c), 20, 20) , 
IMAGE(&apos;/resource/1574166438000/errorIMG&apos;, TEXT(SAPStatus__c) , 20, 20) ))</formula>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>