force-app/main/default/objects/Project__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address for the applicant, for example, 475 Boardwalk Ave. Up to 255 characters are allowed in this field.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>