force-app/main/default/objects/Project__c/fields/SubdividedAreasqm__c.field-meta.xml
<CustomField>
    <fullName>SubdividedAreasqm__c</fullName>
    <label>Subdivided Area (sqm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>