force-app/main/default/objects/Project__c/fields/SubdivisionPlanNumber__c.field-meta.xml
<CustomField>
    <fullName>SubdivisionPlanNumber__c</fullName>
    <label>Subdivision Plan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>