force-app/main/default/objects/Project__c/fields/TelecomLargestSingleUnit__c.field-meta.xml
<CustomField>
    <fullName>TelecomLargestSingleUnit__c</fullName>
    <label>Telecom  Largest Single Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>