force-app/main/default/objects/Project__c/fields/TelecommunicationCabinetNode__c.field-meta.xml
<CustomField>
    <fullName>TelecommunicationCabinetNode__c</fullName>
    <label>Telecommunication Cabinet Node</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>