force-app/main/default/objects/Project__c/fields/TelecomUnitTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>TelecomUnitTotalLoad__c</fullName>
    <label>Telecom Unit Total  Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>