force-app/main/default/objects/Project__c/fields/TodayPlus60Days_fx__c.field-meta.xml
<CustomField>
    <fullName>TodayPlus60Days_fx__c</fullName>
    <formula>IF(
ISPICKVAL(ContestabilityType__c,&apos;IDIC&apos;),
TEXT(DAY(TODAY()+60))+&quot;-&quot; +TEXT(MONTH(TODAY()+60))+&quot;-&quot; +TEXT(YEAR(TODAY()+60)),
TEXT(DAY(TODAY()+120))+&quot;-&quot; +TEXT(MONTH(TODAY()+120))+&quot;-&quot; +TEXT(YEAR(TODAY()+120))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TodayPlus60Days_fx</label>
    <type>Text</type>
</CustomField>