force-app/main/default/objects/Project__c/fields/TotalCoolingLoad__c.field-meta.xml
<CustomField>
    <fullName>TotalCoolingLoad__c</fullName>
    <label>Total Cooling Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>