force-app/main/default/objects/Project__c/fields/TotalLoadOfRectifierBatteryUnits__c.field-meta.xml
<CustomField>
    <fullName>TotalLoadOfRectifierBatteryUnits__c</fullName>
    <label>Total Load Of Rectifier Battery Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>