force-app/main/default/objects/Project__c/fields/TriageDescription__c.field-meta.xml
<CustomField>
    <fullName>TriageDescription__c</fullName>
    <label>Triage Action Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>