force-app/main/default/objects/Project__c/fields/TVE_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>TVE_Project_URL__c</fullName>
    <label>TVE Project URL</label>
    <type>Url</type>
</CustomField>