force-app/main/default/objects/Project__c/fields/TypeOfInstallation__c.field-meta.xml
<CustomField>
    <fullName>TypeOfInstallation__c</fullName>
    <label>Type Of Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telecom facility (Single/Multiple Installation)</fullName>
            </value>
            <value>
                <fullName>Traffic signal(s)</fullName>
            </value>
            <value>
                <fullName>Signalling cabinet(s)</fullName>
            </value>
            <value>
                <fullName>Railway equipment(s)</fullName>
            </value>
            <value>
                <fullName>NBN equipment(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>