force-app/main/default/objects/Project__c/fields/TypeOfPhaseRequired__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPhaseRequired__c</fullName>
    <label>Type Of Phase Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>