force-app/main/default/objects/Project__c/fields/TypeofPremise__c.field-meta.xml
<CustomField>
    <fullName>TypeofPremise__c</fullName>
    <label>Type of Premise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small business/industrial property (Less than 50kVA)</fullName>
            </value>
            <value>
                <fullName>Units/flats development</fullName>
            </value>
            <value>
                <fullName>Shopping centre/large retailer (Single/Multiple Installation)</fullName>
            </value>
            <value>
                <fullName>Production facility</fullName>
            </value>
            <value>
                <fullName>EV charging Station</fullName>
            </value>
            <value>
                <fullName>Telecom facility (Single/Multiple Installations)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Telecom facility (Single/Multiple Installation)</fullName>
                <isActive>false</isActive>
                <label>Telecom facility (Single/Multiple Installation)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>