force-app/main/default/objects/Project__c/fields/TypeOfProperty__c.field-meta.xml
<CustomField>
    <fullName>TypeOfProperty__c</fullName>
    <label>Type Of Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House/Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>