force-app/main/default/objects/Project__c/fields/TypeofSupply__c.field-meta.xml
<CustomField>
    <fullName>TypeofSupply__c</fullName>
    <label>Type of Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Phase (230 volts)</fullName>
            </value>
            <value>
                <fullName>Two Phase (230/460 volts)</fullName>
            </value>
            <value>
                <fullName>Three Phase (230/400 volts)</fullName>
            </value>
            <value>
                <fullName>Low Voltage (Single/Two/Three phase)</fullName>
            </value>
            <value>
                <fullName>High Voltage (22kV or above)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>