force-app/main/default/objects/Project__c/fields/Updated_By_Integration__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated By Integration</label>
    <type>Checkbox</type>
</CustomField>