force-app/main/default/objects/Project__c/fields/UpgradeRequirements__c.field-meta.xml
<CustomField>
    <fullName>UpgradeRequirements__c</fullName>
    <label>Upgrade Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I want to upgrade my existing connection phase</fullName>
            </value>
            <value>
                <fullName>I want to get extra capacity only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>