force-app/main/default/objects/Project__c/fields/UploadDocumentsLink__c.field-meta.xml
<CustomField>
    <fullName>UploadDocumentsLink__c</fullName>
    <label>Upload Documents Link</label>
    <type>Url</type>
</CustomField>