force-app/main/default/objects/Project__c/fields/Vegetation__c.field-meta.xml
<CustomField>
    <fullName>Vegetation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the Support Services &amp; Operations Checklist Flow and not displayed on the page layout</description>
    <label>Vegetation</label>
    <type>Checkbox</type>
</CustomField>