force-app/main/default/objects/Project__c/fields/WaterHeatingLargestUnit__c.field-meta.xml
<CustomField>
    <fullName>WaterHeatingLargestUnit__c</fullName>
    <label>Water Heating Largest Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>