force-app/main/default/objects/Project__c/fields/WaterHeatingTotalLoad__c.field-meta.xml
<CustomField>
    <fullName>WaterHeatingTotalLoad__c</fullName>
    <label>Water Heating Total Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>