force-app/main/default/objects/Project__c/fields/WorkCode__c.field-meta.xml
<CustomField>
    <fullName>WorkCode__c</fullName>
    <description>Mandatory on SAP to create the master work order.</description>
    <label>Work Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>