force-app/main/default/objects/Project__c/recordTypes/Commercial_Business_and_Industrial.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Business_and_Industrial</fullName>
    <active>true</active>
    <label>Commercial, Business and Industrial</label>
</RecordType>