force-app/main/default/objects/Project__c/recordTypes/New_Estate.recordType-meta.xml
<RecordType>
    <fullName>New_Estate</fullName>
    <active>true</active>
    <label>New Estate</label>
</RecordType>