force-app/main/default/objects/Project__c/recordTypes/Public_Lighting.recordType-meta.xml
<RecordType>
    <fullName>Public_Lighting</fullName>
    <active>true</active>
    <label>Public Lighting</label>
</RecordType>