force-app/main/default/objects/Project__c/recordTypes/Public_Mains_Private_Land.recordType-meta.xml
<RecordType>
    <fullName>Public_Mains_Private_Land</fullName>
    <active>true</active>
    <label>Private Mains in Public Land</label>
</RecordType>