force-app/main/default/objects/Project__c/recordTypes/Relocation_alteration_or_removal_of_an_asset.recordType-meta.xml
<RecordType>
    <fullName>Relocation_alteration_or_removal_of_an_asset</fullName>
    <active>true</active>
    <label>Relocation, alteration or removal of an asset</label>
</RecordType>